fix question_title spacing by adding text-wrap: balance

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ button {
 #question_title {
     font-family: var(--primary-font);
     font-size: 19px;
-    /* padding: 10px 0; */
+    text-wrap: balance;
 }
 
 #results_panel .results_icon {
